# repoyard

./: .gitignore  BUG_FIX_PLAN.md  CHANGELOG.md  CLAUDE.md  INTEGRATION_TEST_ISOLATION_PLAN.md  LOCKING_IMPLEMENTATION_PLAN.md  NBLITE_INSTRUCTIONS.md  README.md  REPO_ID_RENAME_DELETE_PLAN.md  TODO.md  nblite.toml  publish_new_version.sh  pyproject.toml  update_docs.sh
.github/workflows/: ci.yml  release.yml
__migrations/: 00 9871326f2152f6844af80a9d29a8526e597b52bb.ipynb
__scratch/: 00_check_last_time_modified_test.ipynb
__scratch/rclone_tests/sync_tests10_filter/: main.sh
__scratch/rclone_tests/sync_tests11_individual_files/: main.sh
__scratch/rclone_tests/sync_tests12_overwriting_filters/: main.sh
__scratch/rclone_tests/sync_tests13_backup/: main.sh
__scratch/rclone_tests/sync_tests14_symlinks/: jimbo.txt  main.sh
__scratch/rclone_tests/sync_tests15_backup_and_restore/: main.sh
__scratch/rclone_tests/sync_tests15_backup_and_restore_2/: main.ipynb  main.sh
__scratch/rclone_tests/sync_tests2/: rclone.conf
__scratch/rclone_tests/sync_tests3/: exclude.txt
__scratch/rclone_tests/sync_tests7_exclude/: main.sh
__scratch/rclone_tests/sync_tests9/: main.sh
__scratch/sync_tests10_filter/: main.sh
__scratch/sync_tests2/my_local/: hello.txt.conflict1  hello.txt.conflict2
__scratch/sync_tests2/my_remote/: bojangles.txt
__scratch/sync_tests3/: main.sh
__scratch/sync_tests4/: conclusion.txt
__scratch/sync_tests5/: main.sh
__scratch/sync_tests6/: main.sh
__scratch/sync_tests8_include/: main.sh
dev_scripts/: clean-project
nbs/mod/: _models.ipynb  _repos.ipynb  _utils.ipynb  config.ipynb  const.ipynb  index.ipynb
nbs/mod/_cli/: app.ipynb  main.ipynb  multi-sync.ipynb
nbs/mod/_cmds/: init.ipynb  init_repoyard.ipynb  new.ipynb  sync.ipynb  sync_repometas.ipynb
nbs/mod/_utils/: 00_base.ipynb  01_rclone.ipynb  02_bisync_helper.ipynb  02_sync_helper.ipynb  03_logical_expressions.ipynb
nbs/mod/cmds/: 00_init_repoyard.ipynb  01_new_repo.ipynb  02_get_repo_sync_status.ipynb  02_sync_repo.ipynb  03_sync_repo.ipynb  03_sync_repometas.ipynb  04_modify_repometa.ipynb  04_sync_missing_repometas.ipynb  04_sync_repometas.ipynb  05_include_repo.ipynb  05_modify_repometa.ipynb  06_exclude_repo.ipynb  07_delete_repo.ipynb  07_include_repo.ipynb  08_delete_repo.ipynb  09_create_user_symlinks.ipynb  _delete_repo.ipynb  _exclude_repo.ipynb  _include_repo.ipynb  _init_repoyard.ipynb  _modify_repometa.ipynb  _new_repo.ipynb  _sync_repo.ipynb  _sync_repometas.ipynb
nbs/tests/: test00_sync.ipynb  test01_cli.ipynb  test_00_sync.ipynb  test_01_multiple_locals.ipynb  test_02_remote.ipynb  utils.ipynb
pts/mod/: _enums.pct.py  _fast.pct.py  _models.pct.py  _remote_index.pct.py  _repos.pct.py  _tombstones.pct.py  _utils.pct.py  config.pct.py  const.pct.py  index.pct.py
pts/mod/_cli/: app.pct.py  main.pct.py  multi-sync.pct.py  path_tui.pct.py
pts/mod/_cmds/: init.pct.py  init_repoyard.pct.py  new.pct.py  sync.pct.py
pts/mod/_utils/: 00_base.pct.py  01_rclone.pct.py  02_bisync_helper.pct.py  02_sync_helper.pct.py  03_logical_expressions.pct.py  04_locking.pct.py
pts/mod/cmds/: 00_init_boxyard.pct.py  00_init_repoyard.pct.py  01_new_box.pct.py  01_new_repo.pct.py  02_get_box_sync_status.pct.py  02_get_repo_sync_status.pct.py  03_sync_box.pct.py  03_sync_repo.pct.py  03_sync_repometas.pct.py  04_modify_repometa.pct.py  04_sync_missing_boxmetas.pct.py  04_sync_missing_repometas.pct.py  04_sync_repometas.pct.py  05_modify_boxmeta.pct.py  05_modify_repometa.pct.py  06_exclude_box.pct.py  06_exclude_repo.pct.py  07_delete_repo.pct.py  07_include_box.pct.py  07_include_repo.pct.py  08_delete_box.pct.py  08_delete_repo.pct.py  09_create_user_symlinks.pct.py  10_rename_box.pct.py  10_rename_repo.pct.py  11_sync_name.pct.py  12_copy_from_remote.pct.py  13_force_push_to_remote.pct.py  _delete_repo.pct.py  _exclude_repo.pct.py  _include_repo.pct.py  _modify_repometa.pct.py  _new_repo.pct.py  _sync_repo.pct.py  _sync_repometas.pct.py
pts/tests/: test00_sync.pct.py  test01_cli.pct.py  test_00_sync.pct.py  test_01_multiple_locals.pct.py  test_02_remote.pct.py  utils.pct.py
pts/tests/integration/: conftest.pct.py  test_fixture_isolation.pct.py
pts/tests/unit/: test_fast.pct.py
repoyard/: _models.py  config.py  const.py
repoyard/_cli/: main.py  multi_sync.py
repoyard/_utils/: base.py  rclone.py  sync_helper.py
repoyard/cmds/: __init__.py  _create_user_symlinks.py  _delete_repo.py  _exclude_repo.py  _get_repo_sync_status.py  _include_repo.py  _init_repoyard.py  _modify_repometa.py  _new_repo.py  _sync_missing_repometas.py  _sync_repo.py  _sync_repometas.py
src/boxyard/: _enums.py  _fast.py  _models.py  _remote_index.py  _tombstones.py  config.py  const.py
src/boxyard/_cli/: app.py  main.py  multi_sync.py  path_tui.py
src/boxyard/_utils/: __init__.py  base.py  locking.py  logical_expressions.py  rclone.py  sync_helper.py
src/boxyard/cmds/: __init__.py  _copy_from_remote.py  _create_user_symlinks.py  _delete_box.py  _exclude_box.py  _force_push_to_remote.py  _get_box_sync_status.py  _include_box.py  _init_boxyard.py  _modify_boxmeta.py  _new_box.py  _rename_box.py  _sync_box.py  _sync_missing_boxmetas.py  _sync_name.py
src/repoyard/: _models.py  _remote_index.py  _tombstones.py  config.py  const.py
src/repoyard/_cli/: __init__.py  app.py  main.py  multi_sync.py
src/repoyard/_utils/: __init__.py  base.py  locking.py  logical_expressions.py  rclone.py  sync_helper.py
src/repoyard/cmds/: __init__.py  _copy_from_remote.py  _create_user_symlinks.py  _delete_repo.py  _exclude_repo.py  _force_push_to_remote.py  _get_repo_sync_status.py  _include_repo.py  _init_repoyard.py  _modify_repometa.py  _new_repo.py  _rename_repo.py  _sync_missing_repometas.py  _sync_name.py  _sync_repo.py
src/tests/: test_00_sync.py  test_01_multiple_locals.py  test_02_remote.py  utils.py
src/tests/integration/: conftest.py  test_fixture_isolation.py
src_bak/repoyard/: _models.py  config.py
src_bak/tests/: test_00_sync.py  test_01_multiple_locals.py  test_02_remote.py  utils.py
(+115 files in other folders)
