[project]
name = "repoyard"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.12.0",
    "pydantic>=2.12.4",
    "python-ulid[pydantic]>=3.1.0",
    "rich>=14.2.0",
    "toml>=0.10.2",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
packages = ["src/repoyard", "src/tests"]
include = ["src/repoyard/static/**"]

[dependency-groups]
dev = [
    "git-cliff>=2.10.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.0",
    "nblite>=1.1.10",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "twine>=6.2.0",
]

[project.scripts]
repoyard = "repoyard._cli.app:app"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (require external resources like rclone)",
    "remote: marks tests that require remote storage credentials (skipped if not configured)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = []
extend-exclude = [
    "__*.pct.py",
    "*.ipynb", # ruff does not play nice with nblite
] 

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "E402",   # Module level import not at top (module-level-import-not-at-top)
]

[tool.ruff.lint.per-file-ignores]
"*.pct.py" = [
    "I001", # Unsorted imports
    "E701", # Multiple statements on one line newline (no-multiple-statements)
    "E702", # Multiple statements on one line semicolon (no-multiple-statements)
    "E703", # useless-semicolon
    "E265", # Block comment should start with '# ' (nblite uses #|directive)
]
"src/repoyard/_cli/__init__.py" = [
    "F401", # Unused imports (autogenerated re-exports)
]
"src/repoyard/_cli/main.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "E731", # Lambda assignment (intentional pattern in notebook)
    "B904", # Exception chaining (typer.Exit pattern)
    "C416", # List comprehension patterns from notebook code
    "C419", # List comprehension in all() check
    "B905", # zip without strict (Python 3.10+ feature)
]
"src/repoyard/_cli/multi_sync.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "C416", # List comprehension patterns from notebook code
    "B905", # zip without strict (Python 3.10+ feature)
    "F841", # Unused variable
    "B007", # Unused loop variable
]
"src/repoyard/config.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "C408", # dict() calls (intentional pattern in notebook)
]
"src/repoyard/const.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
]
"src/repoyard/_models.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "B018", # Useless expression (property access for validation)
    "B904", # Exception chaining
    "C401", # Generator to set
    "F841", # Unused variable
    "C408", # dict() calls
    "F403", # Star imports from notebook
    "F405", # Undefined from star import
]
"src/repoyard/_utils/__init__.py" = [
    "F403", # Star imports (intentional re-export pattern)
]
"src/repoyard/_utils/*.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "B904", # Exception chaining
    "B020", # Loop variable override
    "B007", # Unused loop variable
    "B006", # Mutable default arg
    "F841", # Unused variable
    "E721", # Type comparison style
    "W293", # Whitespace in blank line
]
"src/repoyard/cmds/__init__.py" = [
    "F401", # Unused imports (autogenerated re-exports)
]
"src/repoyard/cmds/*.py" = [
    "I001", # Unsorted imports (autogenerated from notebooks)
    "F841", # Unused variable
    "C416", # List comprehension patterns
    "B905", # zip without strict
    "B006", # Mutable default arg
    "B904", # Exception chaining
    "B023", # Loop variable binding
]

[tool.ruff.lint.isort]
known-first-party = ["nblite"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
